deploy/namespaces/pg-backups/netpol/05-pg-backups-postgres-pompetrack-core.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pg-pompetrack-core-from-pg-backups
  namespace: pompetrack-core
spec:
  podSelector:
    matchLabels:
      app: pompetrack-core-postgresql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: pg-backups
      podSelector: {}
    ports:
    - protocol: TCP
      port: 5432

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pg-pompetrack-core-to-pg-backups
  namespace: pg-backups
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: pompetrack-core
      podSelector:
        matchLabels:
          app: pompetrack-core-postgresql
    ports:
    - protocol: TCP
      port: 5432
